tests/logs/latest_test_log.txt
Arca Test Execution & Runtime Stdout Log
Timestamp: Wed Jul 22 23:58:08 UTC 2026
=========================================
-----------------------------------------
Test #1: arithmetic.test.arca
File: tests/features/arithmetic.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/arithmetic.test.arca
15
30
Result: PASS
-----------------------------------------
Test #2: borrow.test.arca
File: tests/features/borrow.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/borrow.test.arca
42
Result: PASS
-----------------------------------------
Test #3: channel.test.arca
File: tests/features/channel.test.arca
Duration: 0s
Runtime Stdout:
error: Member property 'new' does not exist on struct
Result: FAIL
-----------------------------------------
Test #4: comparison.test.arca
File: tests/features/comparison.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/comparison.test.arca
1
1
1
1
1
1
Result: PASS
-----------------------------------------
Test #5: defer.test.arca
File: tests/features/defer.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/defer.test.arca
1
2
Result: PASS
-----------------------------------------
Test #6: enum.test.arca
File: tests/features/enum.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/enum.test.arca
10
20
Result: PASS
-----------------------------------------
Test #7: env.test.arca
File: tests/features/env.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/env.test.arca
/Users/hy4-mac-002
Result: PASS
-----------------------------------------
Test #8: env_full.test.arca
File: tests/features/env_full.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/env_full.test.arca
0
/Users/hy4-mac-002/hasdev/research/project-arca
Result: PASS
-----------------------------------------
Test #9: extend.test.arca
File: tests/features/extend.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/extend.test.arca
99
Result: PASS
-----------------------------------------
Test #10: for_loop.test.arca
File: tests/features/for_loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/for_loop.test.arca
10
Result: PASS
-----------------------------------------
Test #11: foreach.test.arca
File: tests/features/foreach.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/foreach.test.arca
6
Result: PASS
-----------------------------------------
Test #12: fs.test.arca
File: tests/features/fs.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/fs.test.arca
0
-1
Result: PASS
-----------------------------------------
Test #13: fs_full.test.arca
File: tests/features/fs_full.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/fs_full.test.arca
-1
-1
4899634919602389440
Result: PASS
-----------------------------------------
Test #14: functions.test.arca
File: tests/features/functions.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/functions.test.arca
55
Result: PASS
-----------------------------------------
Test #15: if_else.test.arca
File: tests/features/if_else.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/if_else.test.arca
20
Result: PASS
-----------------------------------------
Test #16: impl.test.arca
File: tests/features/impl.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/impl.test.arca
42
Result: PASS
-----------------------------------------
Test #17: io.test.arca
File: tests/features/io.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/io.test.arca
0
Result: PASS
-----------------------------------------
Test #18: json.test.arca
File: tests/features/json.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/json.test.arca
"hello"
Result: PASS
-----------------------------------------
Test #19: loop.test.arca
File: tests/features/loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/loop.test.arca
6
Result: PASS
-----------------------------------------
Test #20: match.test.arca
File: tests/features/match.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/match.test.arca
100
Result: PASS
-----------------------------------------
Test #21: match_payload.test.arca
File: tests/features/match_payload.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/match_payload.test.arca
42
Result: PASS
-----------------------------------------
Test #22: math.test.arca
File: tests/features/math.test.arca
Duration: 1s
Runtime Stdout:
build/output_46407.c:23:17: warning: using integer absolute value function 'llabs' when argument is of floating point type [-Wabsolute-value]
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^
build/output_46407.c:23:17: note: use function 'fabs' instead
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^~~~~
      |                 fabs
1 warning generated.
[arca] Running: tests/features/math.test.arca
3
0
1
99
16807
Result: PASS
-----------------------------------------
Test #23: method.test.arca
File: tests/features/method.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/method.test.arca
hello Alice
Result: PASS
-----------------------------------------
Test #24: move.test.arca
File: tests/features/move.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/move.test.arca
100
Result: PASS
-----------------------------------------
Test #25: none.test.arca
File: tests/features/none.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/none.test.arca
0
Result: PASS
-----------------------------------------
Test #26: option.test.arca
File: tests/features/option.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/option.test.arca
1
99
Result: PASS
-----------------------------------------
Test #27: parse_int.test.arca
File: tests/features/parse_int.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/parse_int.test.arca
123
Result: PASS
-----------------------------------------
Test #28: path.test.arca
File: tests/features/path.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/path.test.arca
.txt
file.txt
/tmp
/tmp/notes.txt
Result: PASS
-----------------------------------------
Test #29: path_full.test.arca
File: tests/features/path_full.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/path_full.test.arca
/usr/bin
Result: PASS
-----------------------------------------
Test #30: process.test.arca
File: tests/features/process.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/process.test.arca
0
Result: PASS
-----------------------------------------
Test #31: ref_ptr.test.arca
File: tests/features/ref_ptr.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/ref_ptr.test.arca
50
Result: PASS
-----------------------------------------
Test #32: result.test.arca
File: tests/features/result.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/result.test.arca
1
42
Result: PASS
-----------------------------------------
Test #33: sleep.test.arca
File: tests/features/sleep.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/sleep.test.arca
0
Result: PASS
-----------------------------------------
Test #34: spawn.test.arca
File: tests/features/spawn.test.arca
Duration: 0s
Runtime Stdout:
error: Member property 'new' does not exist on struct
Result: FAIL
-----------------------------------------
Test #35: string.test.arca
File: tests/features/string.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/string.test.arca
hello  
1
1
Result: PASS
-----------------------------------------
Test #36: string_slice.test.arca
File: tests/features/string_slice.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/string_slice.test.arca
1
Result: PASS
-----------------------------------------
Test #37: strings.test.arca
File: tests/features/strings.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/strings.test.arca
1
6
Result: PASS
-----------------------------------------
Test #38: struct.test.arca
File: tests/features/struct.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/struct.test.arca
1
24
Result: PASS
-----------------------------------------
Test #39: throw.test.arca
File: tests/features/throw.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/throw.test.arca
1
Result: PASS
-----------------------------------------
Test #40: to_string.test.arca
File: tests/features/to_string.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/to_string.test.arca
456
Result: PASS
-----------------------------------------
Test #41: try_catch.test.arca
File: tests/features/try_catch.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/try_catch.test.arca
trying
caught
Result: PASS
-----------------------------------------
Test #42: variables.test.arca
File: tests/features/variables.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/variables.test.arca
10
Result: PASS
-----------------------------------------
Test #43: while_loop.test.arca
File: tests/features/while_loop.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/while_loop.test.arca
10
Result: PASS
-----------------------------------------
Test #44: ai.test.arca
File: tests/std-libs/ai.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/std-libs/ai.test.arca
0
csv
bpe
{"role":"assistant","content":"[AI Response to: Hello Arca AI]"}
{"answer":"[RAG Answer for: What is Arca?]","sources":["doc_1"]}
Result: PASS
-----------------------------------------
Test #45: async.test.arca
File: tests/std-libs/async.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/std-libs/async.test.arca
0
1
Result: PASS
-----------------------------------------
Test #46: backend.test.arca
File: tests/std-libs/backend.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/std-libs/backend.test.arca
Native LLVM IR & Machine Code generated successfully
Result: PASS
-----------------------------------------
Test #47: collections.test.arca
File: tests/std-libs/collections.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/std-libs/collections.test.arca
0
0
0
0
0
0
0
Result: PASS
-----------------------------------------
Test #48: compress.test.arca
File: tests/std-libs/compress.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/std-libs/compress.test.arca
zstd_compressed_bytes
Result: PASS
-----------------------------------------
Test #49: crypto.test.arca
File: tests/std-libs/crypto.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/std-libs/crypto.test.arca
e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
Result: PASS
-----------------------------------------
Test #50: http_full.test.arca
File: tests/std-libs/http_full.test.arca
Duration: 0s
Runtime Stdout:
error: Member property 'to_header' does not exist on struct

error: Member property 'post' does not exist on struct
Result: FAIL
-----------------------------------------
Test #51: import.test.arca
File: tests/std-libs/import.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/std-libs/import.test.arca
55
Result: PASS
-----------------------------------------
Test #52: iterator.test.arca
File: tests/std-libs/iterator.test.arca
Duration: 0s
Runtime Stdout:
error: Member property 'filter' does not exist on struct
Result: FAIL
-----------------------------------------
Test #53: log.test.arca
File: tests/std-libs/log.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/std-libs/log.test.arca
hello
Result: PASS
-----------------------------------------
Test #54: opt.test.arca
File: tests/std-libs/opt.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/std-libs/opt.test.arca
610
Result: PASS
-----------------------------------------
Test #55: os.test.arca
File: tests/std-libs/os.test.arca
Duration: 0s
Runtime Stdout:
build/output_47009.c:24:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   24 |   v5 = (const char*)arca_env_get("PATH");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
